推广系统完成

--- a/cxm/package.json
+++ b/cxm/package.json
@@ -14,15 +14,18 @@
     "better-scroll": "^1.12.6",
     "cropperjs": "^1.4.0",
     "element-ui": "^2.3.npm 2",
+    "install": "^0.13.0",
     "localscrollfix": "^2.2.0",
     "lodash": "^4.17.10",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "node-sass": "^4.12.0",
+    "npm": "^6.10.3",
     "nprogress": "^0.2.0",
     "peer": "^0.2.10",
     "prerender-spa-plugin": "^3.2.1",
     "qrcode": "^1.2.0",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.5.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
