--- a/cxm/package.json
+++ b/cxm/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "test": "node build/test.js"
+    "build--test": "cross-env NODE_ENV=testing env_config=test node build/build.js",
+    "build--prod": "cross-env NODE_ENV=production env_config=prod node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
